@@ -1984,8 +1984,8 @@ class Mole(lib.StreamObject):
         topgroup : str
             Point group of the system.
         groupname : str
-            The supported subgroup of the point group. It can be one of Dooh,
-            Coov, D2h, C2h, C2v, D2, Cs, Ci, C2, C1
+            The supported subgroup of the point group. It can be one of SO3,
+            Dooh, Coov, D2h, C2h, C2v, D2, Cs, Ci, C2, C1
         nelectron : int
             sum of nuclear charges - :attr:`Mole.charge`
         symm_orb : a list of numpy.ndarray
@@ -2218,6 +2218,7 @@ class Mole(lib.StreamObject):
     copy = copy
 
     pack = pack
+
     @lib.with_doc(unpack.__doc__)
     def unpack(self, moldic):
         return unpack(moldic)
@@ -2226,6 +2227,7 @@ class Mole(lib.StreamObject):
         return self
 
     dumps = dumps
+
     @lib.with_doc(loads.__doc__)
     def loads(self, molstr):
         return loads(molstr)
