@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-# Copyright 2014-2018 The PySCF Developers. All Rights Reserved.
+# Copyright 2014-2020 The PySCF Developers. All Rights Reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -163,6 +163,14 @@ class KnowValues(unittest.TestCase):
                  'O': gto.basis.load('def2svp', 'C'),}
         n, so = get_so(atoms, basis)
         self.assertEqual([c.shape[1] for c in so], [134, 104])
+
+    def test_symm_orb_so3(self):
+        atoms = [['Si', (0, 0, 0)]]
+        basis = {'Si': gto.basis.load('ccpvtz', 'Si')}
+        n, so = get_so(atoms, basis)
+        idx, idy = numpy.where(numpy.hstack(so) != 0)
+        self.assertEqual(idy.argsort().tolist(),
+                         [0,1,2,3,4,6,9,12,15,7,10,13,16,5,8,11,14,17,22,18,23,19,24,20,25,21,26,27,28,29,30,31,32,33])
 
 
 if __name__ == "__main__":
